log
Sun Mar 20 21:24:04 HSP 2022: 
 tests:  0|6
total_score: 0/70
e5bdcf6
Sun Mar 20 21:25:43 HSP 2022: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
1bb5b4c
Sun Mar 20 21:26:09 HSP 2022: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  5|4
total_score: 25/70
94d1aec
Sun Mar 20 21:26:35 HSP 2022: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  9|3
total_score: 35/70
dea6772
Sun Mar 20 21:26:56 HSP 2022: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  10|2
total_score: 45/70
26b01db
Sun Mar 20 21:28:08 HSP 2022: 
 list.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  11|1
total_score: 55/70
7e1db79
Sun Mar 20 21:31:42 HSP 2022: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  11|1
total_score: 55/70
86d30a6
Sun Mar 20 21:37:24 HSP 2022: 
 list.c | 26 ++++++++++++++++++--------
 1 file changed, 18 insertions(+), 8 deletions(-)
 tests:  10|2
total_score: 45/70
2f82a2e
Sun Mar 20 21:40:27 HSP 2022: 
 list.c | 26 +++++++++++++++++++++++++-
 1 file changed, 25 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushCurrent':
list.c:122:5: error: this 'else' clause does not guard... [-Werror=misleading-indentation]
     else
     ^~~~
list.c:124:6: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'else'
      list->tail = nodo;
      ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
57040e3
Sun Mar 20 21:40:50 HSP 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|1
total_score: 60/70
26a0378
Sun Mar 20 21:55:21 HSP 2022: 
 list.c | 60 ++++++++++++++++++++++++++----------------------------------
 1 file changed, 26 insertions(+), 34 deletions(-)
 tests:  11|1
total_score: 60/70
f3853ca
